--- a/src/assets/style/header.less
+++ b/src/assets/style/header.less
@@ -4,20 +4,27 @@
 	justify-content: space-between;
 	align-items: center;
 	z-index: 999;
-	/*padding-right: 10px !important;*/
-}
-.ant-menu-submenu-title{
-	height: 50px;
-}
-.ant-menu-submenu-title .avator{
-	width: 50px;
-	height: 50px;
-	display: block;
-	border-radius: 50%
-}
-#root .ant-menu-submenu,  .ant-menu-submenu-active{
-	border-bottom: none;
-}
-#root .ant-menu-horizontal{
-	border-bottom: none;
+	
+	.trigger{
+		font-size: 18px;
+	    line-height: 64px;
+	    padding: 0 16px;
+	    cursor: pointer;
+	    transition: color .3s;
+	    &:hover{
+		    color: @zzmd;
+		}
+	}
+	.headerMenu{
+		border-bottom: none;
+		.ant-menu-submenu{
+			border-bottom: none;
+			.avator{
+				width: 50px;
+				height: 50px;
+				display: block;
+				border-radius: 50%
+			}
+		}
+	}
 }
