--- a/src/assets/style/index.less
+++ b/src/assets/style/index.less
@@ -1,28 +1,30 @@
 .ant-layout{
-  height: 100%;
+    height: 100%;
 }
-#root .layoutWrapper{
-  flex-direction: row;
-}
-.logo{
-  height: 32px;
-  background: #333;
-  border-radius: 6px;
-  margin: 16px;
-}
-.trigger{
-	font-size: 18px;
-  line-height: 64px;
-  padding: 0 16px;
-  cursor: pointer;
-  transition: color .3s;
-}
-.trigger:hover{
-	color: #108ee9;
-}
-.ant-layout-sider-collapsed .anticon {
-  font-size: 16px;
-}
-.ant-layout-sider-collapsed .nav-text {
-  display: none;
+.layoutWrapper{
+    flex-direction: row;
+
+    .layoutContent{
+        margin: 24px 0 0 16px;
+        padding: 24px;
+        background: #fff;
+        minHeight: 280px;
+        overflow-y: auto;
+
+        .contentCol{
+        	height: 50px;
+        	background-color: #ececec;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            padding: 0 15px;
+
+            .ant-input-group-wrapper, .searchInput{
+                margin-right: 15px;
+            }
+        }
+        .colBtn{
+            margin-right: 15px;
+        }
+    }
 }
