--- a/src/assets/style/main.less
+++ b/src/assets/style/main.less
@@ -1,11 +1,18 @@
-/*@import '../theme/default';*/
-@import '../theme/theme';
+@zzmd: #3eba6c;
+/*@import "~antd/dist/antd.less";
+@import '../theme/theme';*/
 
-@import 'index';
-@import 'header';
-@import 'sidebar';
-@import 'login';
 
 #root{
-	height: 100%
+	height: 100%;
+	@import 'index';
+	@import 'header';
+	@import 'sidebar';
+	@import 'login';
+
+
+	/*.ant-pagination-item, .ant-pagination-item-active, .ant-switch-checked{
+		background-color: @zzmd;
+	    border-color: @zzmd;
+	}*/
 }
