--- a/src/assets/theme/default.less
+++ b/src/assets/theme/default.less
@@ -1,4 +1,5 @@
-@import "../color/colors";
+/* stylelint-disable at-rule-empty-line-before,at-rule-name-space-after,at-rule-no-unknown */
+@import "./color";
 
 // The prefix to use on all css classes from ant.
 @ant-prefix             : ant;
@@ -172,10 +173,10 @@
 @screen-xl-min          : @screen-xl;
 
 // provide a maximum
-@screen-xs-max          : (@screen-sm-min - 1);
-@screen-sm-max          : (@screen-md-min - 1);
-@screen-md-max          : (@screen-lg-min - 1);
-@screen-lg-max          : (@screen-xl-min - 1);
+@screen-xs-max          : (@screen-sm-min - 1px);
+@screen-sm-max          : (@screen-md-min - 1px);
+@screen-md-max          : (@screen-lg-min - 1px);
+@screen-lg-max          : (@screen-xl-min - 1px);
 
 // Grid system
 @grid-columns           : 24;
@@ -189,6 +190,8 @@
 @layout-footer-padding       : 24px 50px;
 @layout-sider-background     : @layout-header-background;
 @layout-trigger-height       : 48px;
+@layout-trigger-background   : tint(@heading-color, 20%);
+@layout-trigger-color        : #fff;
 @layout-zero-trigger-width   : 36px;
 @layout-zero-trigger-height  : 42px;
 
@@ -212,7 +215,7 @@
 // Form
 // ---
 @label-required-color        : @highlight-color;
-@label-color                 : @text-color;
+@label-color                 : @heading-color;
 @form-item-margin-bottom     : 24px;
 @form-item-trailing-colon    : true;
 
@@ -225,7 +228,7 @@
 @input-padding-vertical-base : 4px;
 @input-padding-vertical-sm   : 1px;
 @input-padding-vertical-lg   : 6px;
-@input-placeholder-color     : #ccc;
+@input-placeholder-color     : @disabled-color;
 @input-color                 : @text-color;
 @input-border-color          : @border-color-base;
 @input-bg                    : #fff;
@@ -244,7 +247,7 @@
 //** Tooltip arrow width
 @tooltip-arrow-width: 5px;
 //** Tooltip distance with trigger
-@tooltip-distance: @tooltip-arrow-width - 1 + 4;
+@tooltip-distance: @tooltip-arrow-width - 1px + 4px;
 //** Tooltip arrow color
 @tooltip-arrow-color: @tooltip-bg;
 
@@ -261,11 +264,11 @@
 //** Popover arrow color
 @popover-arrow-color: @popover-bg;
 //** Popover outer arrow width
-@popover-arrow-outer-width: (@popover-arrow-width + 1);
+@popover-arrow-outer-width: (@popover-arrow-width + 1px);
 //** Popover outer arrow color
 @popover-arrow-outer-color: fadeout(@border-color-base, 30%);
 //** Popover distance with trigger
-@popover-distance: @popover-arrow-width + 4;
+@popover-distance: @popover-arrow-width + 4px;
 
 // Modal
 // --
@@ -290,7 +293,9 @@
 // Table
 // --
 @table-header-bg: @background-color-base;
+@table-header-sort-bg: @background-color-active;
 @table-row-hover-bg: @primary-1;
+@table-selected-row-bg: #fafafa;
 @table-padding-vertical: 16px;
 @table-padding-horizontal: 8px;
 
@@ -315,6 +320,7 @@
 // ---
 @badge-height: 20px;
 @badge-dot-size: 8px;
+@badge-font-size: @font-size-base;
 
 // Rate
 // ---
@@ -330,8 +336,20 @@
 // Tabs
 // ---
 @tabs-card-head-background: #f9f9f9;
+@tabs-title-font-size: @font-size-lg;
 
 // BackTop
 @back-top-color: #fff;
 @back-top-bg: rgba(64, 64, 64, 0.4);
 @back-top-hover-bg: rgba(64, 64, 64, 0.6);
+
+// Avatar
+@avatar-size-base: 32px;
+@avatar-size-lg: 40px;
+@avatar-size-sm: 24px;
+@avatar-font-size-base: 18px;
+@avatar-font-size-lg: 24px;
+@avatar-font-size-sm: 14px;
+@avatar-bg: #ccc;
+@avatar-color: #fff;
+@avatar-border-radius: @border-radius-base;
