complete change theme

--- a/src/assets/theme/colors.less
+++ b/src/assets/theme/colors.less
@@ -1,6 +1,17 @@
 @import 'colorPalette';
 
 // color palettes
+@zzmd-1: color(~`colorPalette("@{zzmd-6}", 1)`);
+@zzmd-2: color(~`colorPalette("@{zzmd-6}", 2)`);
+@zzmd-3: color(~`colorPalette("@{zzmd-6}", 3)`);
+@zzmd-4: color(~`colorPalette("@{zzmd-6}", 4)`);
+@zzmd-5: color(~`colorPalette("@{zzmd-6}", 5)`);
+@zzmd-6: #3eba6c;
+@zzmd-7: color(~`colorPalette("@{zzmd-6}", 7)`);
+@zzmd-8: color(~`colorPalette("@{zzmd-6}", 8)`);
+@zzmd-9: color(~`colorPalette("@{zzmd-6}", 9)`);
+@zzmd-10: color(~`colorPalette("@{zzmd-6}", 10)`);
+
 @blue-1: color(~`colorPalette("@{blue-6}", 1)`);
 @blue-2: color(~`colorPalette("@{blue-6}", 2)`);
 @blue-3: color(~`colorPalette("@{blue-6}", 3)`);
