--- a/src/assets/style/index.less
+++ b/src/assets/style/index.less
@@ -11,6 +11,11 @@
         minHeight: 280px;
         overflow-y: auto;
 
+        .treeCol{
+            /*padding: 24px 16px 0;*/
+            /*box-sizing: border-box;*/
+        }
+
         .contentCol{
         	height: 50px;
         	background-color: #ececec;
